--- a/views/producto.hbs
+++ b/views/producto.hbs
@@ -1,5 +1,5 @@
-<div class="container-fluid bg-dark" style="height : 76vh">
-     <div class="row justify-content-center align-items-center" style="height : 78vh">
+<div class="container-fluid bg-dark">
+     <div class="row justify-content-center align-items-center" style="height : 85vh">
         <div class="col-4">
             <div class="card mb-3">
             <img src="..." class="card-img-top" alt="...">
